# Agentic_AI

./: Dockerfile  README.md  __main__.py  docker-compose.yml  generate_sample_db.py  openai_agent_executor.py  pyproject.toml  test_client.py
src/: __init__.py  __main__.py  agent_toolset.py  crypto.db  ecommerce.db  openai_agent.py  openai_agent_executor.py  test_data.db  university.db  weather.db
